# aiconsole

./: .dockerignore  .env.template  .gitignore  LICENSE  LICENSE copy  README copy.md  README.md  docker-compose.yml  make_electron_app.sh  package.json  pyproject.toml  settings.toml
.docker/: Dockerfile
backend/: pyproject.toml
backend/aiconsole/: app.py  consts.py  electron.py  init.py
backend/aiconsole/agents/: bidara.py
backend/aiconsole/agents/core/: planner.py  writer.py
backend/aiconsole/analysis/: create_agents_str.py  create_materials_str.py  create_plan_class.py  gpt_analysis_function_step.py
backend/aiconsole/api/: routers.py
backend/aiconsole/api/endpoints/: agents.py  analyse.py  check_key.py  commands_history.py  execute.py  image.py  ping.py  profile.py  project_settings.py  run_code.py  ws.py
backend/aiconsole/api/utils/: asset_exists.py  asset_get.py  asset_save.py  asset_status_change.py  status_change_post_body.py
backend/aiconsole/api/websockets/: connection_manager.py  handle_chat_id_message.py  handle_incoming_message.py  incoming_messages.py  outgoing_messages.py
backend/aiconsole/chat/: types.py
backend/aiconsole/chats/: list_possible_historic_chat_ids.py  load_chat_history.py  save_chat_history.py
backend/aiconsole/code_running/code_interpreters/: language_map.py
backend/aiconsole/core/agents/: agents.py  types.py
backend/aiconsole/core/analysis/: AnalysisResponse.py  agents_to_choose_from.py  create_agents_str.py  create_materials_str.py  create_plan_class.py  director.py  gpt_analysis_function_step.py  gpt_analysis_text_step.py  variant_fast_propose_solution_and_fix.py  variant_quality_single_shot.py  variant_two_step_quality.py
backend/aiconsole/core/assets/: asset.py  assets.py  get_material_content_name.py  load_all_assets.py
backend/aiconsole/core/chat/: chat_outgoing_messages.py  types.py
backend/aiconsole/core/chats/: list_possible_historic_chat_ids.py  load_chat_history.py  save_chat_history.py
backend/aiconsole/dev/: credentials.py  project.py  settings.py
backend/aiconsole/execution_modes/: interpreter.py
backend/aiconsole/gpt/: check_key.py  consts.py  request.py
backend/aiconsole/materials/: documentation_from_code.py  materials.py
backend/aiconsole/project_settings/: project_settings.py
backend/aiconsole/recent_projects/: recent_project.py  recent_projects.py
backend/aiconsole/static/: index.html
backend/aiconsole/utils/: BatchingWatchDogHandler.py  cancel_on_disconnect.py  capitalize_first.py  convert_messages.py  inter_process.py  is_update_needed.py  list_files_in_file_system.py  recursive_merge.py  serializable_path.py
backend/aiconsole/websockets/: outgoing_messages.py
backend/tests/: __init__.py  conftest.py
backend/tests/project_settings/: settings_test.py
(+725 files in other folders)
