[tool.poetry]
include = ["aiconsole/static/**/*"]
name = "aiconsole"
version = "0.2.1-alpha17"
description = "Run and expand your personal AI tools"
authors = ["Maciej Cielecki <maciej.cielecki@10clouds.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
tiktoken = "^0.5.1"
openai-function-call = "^0.2.6"
watchdog = "^3.0.0"
litellm = "^0.6.2"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
beautifulsoup4 = "^4.12.2"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
pillow = "^10.0.1"
tomlkit = "^0.12.1"
youtube-transcript-api = "^0.6.1"
python-multipart = "^0.0.6"
appdirs = "^1.4.4"
rtoml = "^0.9.0"
send2trash = "^1.8.2"

[tool.ruff]
line-length = 119

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aiconsole = "aiconsole.init:aiconsole"
dev = "aiconsole.init:aiconsole_dev"
